# kir-jupyter-helper

./: README.md  pyproject.toml
kir_jupyter_helper/: add_kernel.py
